adapted local map page, a try to fix the map on mobile

--- a/assets/scss/global/common.scss
+++ b/assets/scss/global/common.scss
@@ -181,6 +181,13 @@ a:hover {
   align-items: center;
 }
 
+@media (max-width: 1000px) {
+  .custom-container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 @media (max-width: 800px) {
   .custom-container {
     &--main {
