--- a/assets/scss/news-item.scss
+++ b/assets/scss/news-item.scss
@@ -44,6 +44,11 @@
     b {
       font-size: 22px;
       line-height: 20px;
+      display: block;
+    }
+
+    ul {
+      list-style: disc;
     }
   }
 
@@ -268,6 +273,24 @@
       max-width: 100% !important;
       width: auto !important;
       height: auto !important;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .news-content {
+    &-title {
+      font-size: 28px;
+      line-height: 120%;
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .news-content {
+    &-title {
+      font-size: 24px;
+      line-height: 120%;
     }
   }
 }
